# OpencvNdkDemo

app/: build.gradle
app/src/androidTest/java/com/sgr/opencvndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sgr/opencvndkdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sgr/opencvndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
